--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import 'tailwindcss';
 
 #app {
   max-width: 1280px;
@@ -12,9 +13,9 @@
 }
 
 a,
-.green {
+.pink {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: hsl(307, 100%, 37%);
   transition: 0.4s;
   padding: 3px;
 }
@@ -28,6 +29,14 @@ header {
 body {
   display: flex;
   place-items: center;
+}
+
+.main-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  padding-top: 10px;
+  padding-bottom: 60px;
 }
 
 footer {
@@ -45,7 +54,6 @@ footer {
 
 nav {
   width: 100%;
-  font-size: 12px;
   text-align: end;
   font-size: 1rem;
 }
@@ -75,16 +83,21 @@ nav a:first-of-type {
 h1 {
   font-weight: 500;
   font-size: 2.6rem;
-  position: relative;
   top: -10px;
+}
+
+h2 {
+  font-size: 1.6rem;
+  color: var(--color-heading);
 }
 
 h3 {
   font-size: 1.2rem;
 }
 
-.greetings h1,
-.greetings h3 {
+.personal-info h1,
+.personal-info h2,
+.personal-info h3 {
   text-align: center;
 }
 
@@ -96,24 +109,150 @@ header .wrapper {
   padding-bottom: 10px;
 }
 
-.flex {
+.flex-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
+.icon-style {
+  display: flex;
+  place-items: center;
+  place-content: center;
+  min-width: 40px;
+  min-height: 40px;
+  color: var(--color-text);
+  border: 1px solid var(--color-border);
+  background: var(--color-background);
+  border-radius: 8px;
+  padding: 4px;
+}
+
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(307, 100%, 37%, 0.2);
   }
+}
+
+.about-list {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.about-list li {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 @media (min-width: 1024px) {
   .logo {
     margin: 0 2rem 0 0;
   }
+
+  .about-list li {
+    flex-direction: row;
+  }
+
+  .about-list li:nth-child(even) {
+    flex-direction: row-reverse;
+    text-align: right;
+  }
+
+  .about-list li:nth-child(even) h3 {
+    max-width: 90%;
+  }
+
   header .wrapper {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+
+  .icon-style {
+    min-width: 50px;
+    height: 50px;
+    padding: 10px;
+  }
+
+  .main-content {
+    width: 70%;
+  }
+}
+
+.drawer-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: right;
+  align-items: stretch;
+  border-radius: 5px;
+  transition: right 1s;
+}
+
+.drawer {
+  box-shadow: 2px 2px 20px 1px;
+  background-color: var(--vt-c-white);
+  overflow-x: auto;
+  display: flex;
+  flex-direction: column;
+  opacity: 100%;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .drawer {
+    background-color: var(--vt-c-black);
+  }
+}
+
+.btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  font-size: 20px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  color: hsl(307, 100%, 37%);
+  background: transparent;
+}
+
+.drawer-header {
+  position: relative;
+  display: flex;
+  border-bottom: 1px solid;
+  justify-content: right;
+  margin: 5px;
+  padding-bottom: 10px;
+}
+
+.drawer-body {
+  position: relative;
+  padding: 20px 10px 10px 10px;
+}
+
+.drawer-body nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.drawer-body nav a {
+  border-left: 0px;
+  border-top: 1px solid var(--color-border);
+  padding: 1rem;
+}
+.drawer-body nav a:first-of-type {
+  border: 0;
+}
+
+.drawer-footer {
+  display: flex;
+  justify-content: flex-end;
 }
